--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "spatie/laravel-permission": "^5.10",
+        "voku/simple_html_dom": "^4.8",
         "yajra/laravel-datatables-oracle": "^10.7"
     },
     "require-dev": {
