--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/socialite": "^5.9",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^5.10",
         "voku/simple_html_dom": "^4.8",
         "yajra/laravel-datatables-oracle": "^10.7"
